# BasicCMake

./: CMakeLists.txt  README.md
libraries/MyLibrary/: CMakeLists.txt
libraries/MyLibrary/includes/: MyLibrary.h
libraries/MyLibrary/src/: MyLibrary.cpp
src/: main.cpp
src/helpers/: AwesomeHelper.cpp  OkHelper.cpp
src/helpers/includes/: AwesomeHelper.h  OkHelper.h
src/models/: Person.cpp
src/models/includes/: Person.h
